--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,9 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
     /* ViewModel */
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
+
+    /* Retrofit and GSON */
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.google.code.gson:gson:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 }
