--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+
     /* ViewModel */
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
 
@@ -68,4 +69,7 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.google.code.gson:gson:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+
+    /* Navigation */
+    implementation "androidx.navigation:navigation-compose:2.5.3"
 }
