Reduce apk size by 172kb.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+        resConfigs "en" // Less 100kb
     }
 
     buildTypes {
