Done with chapter 8.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.ERestaurant"
         tools:targetApi="33">
         <activity
-            android:name=".MainActivity"
+            android:name=".restaurants.presentation.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.ERestaurant">
